<resources>
    <string name="app_name">Matrix Android App</string>
    <string name="button_compute">Compute</string>
    <string name="matrix_size_text">Matrix size (AxA):</string>
    <string name="matrix_module">Matrix module:</string>
    <string name="matrix_print">Print matrixes:</string>
    <string name="matrix_size_hint">Integer number</string>
    <string name="matrix_module_hint">Integer number</string>
    <string name="working">Working&#8230;</string>
    <string name="done">Done.</string>
    <string name="matrix_timing">Time needed for computation</string>
    <string name="http_endpoint">HTTP endpoint</string>
    <string name="http_endpoint_hint">http://192.168.2.65:5000/message</string>
</resources>
