<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/matrix_size_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/matrix_size_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/matrix_module_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/matrix_module"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matrix_size_text" />

    <TextView
        android:id="@+id/matrix_print_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/matrix_print"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matrix_module_text" />

    <TextView
        android:id="@+id/http_endpoint_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/http_endpoint"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matrix_print_text" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/compute"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/matrix_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/matrix_size_hint"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/matrix_size_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/matrix_size_text"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/matrix_module"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/matrix_module_hint"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/matrix_module_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/matrix_module_text"
        tools:targetApi="o" />

    <Switch
        android:id="@+id/matrix_print"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/matrix_print_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/matrix_print_text" />

    <EditText
        android:id="@+id/http_endpoint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/http_endpoint_hint"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/http_endpoint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/http_endpoint_text"
        app:layout_constraintTop_toBottomOf="@+id/matrix_print"
        tools:targetApi="o" />

    <Button
        android:id="@+id/compute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:focusable="auto"
        android:onClick="compute"
        android:text="@string/button_compute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/http_endpoint" />


    <EditText
        android:id="@+id/matrix_timing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/matrix_timing"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compute"
        tools:targetApi="o" />

    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matrix_timing">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp" />
        </ScrollView>
    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>